[package]
name = "pinger"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ping = "0.6"
tokio = { version = "1.47", features = [
    "signal",
    "rt",
    "rt-multi-thread",
    "time",
    "macros",
] }
tracing = "0.1"
hickory-resolver = { version = "0.25" }
humantime = "2.2"
tracing-subscriber-multi = "0.1"
file-rotate = "0.7"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
