[package]
name = "pinger"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
tokio = { version = "1.47", features = [
    "signal",
    "rt",
    "rt-multi-thread",
    "time",
    "macros",
] }

# cli
clap = { version = "4.5", features = ["derive"] }
humantime = "2.2"

# network
ping = "0.6"
hickory-resolver = "0.25"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-subscriber-multi = "0.1"
file-rotate = "0.7"
